# webp-compressor

./: LICENSE  README.md  index.html  package-lock.json  package.json
docs/: draws.drawio
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: Compressor.vue
